--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://use.typekit.net/oov2wcw.css");
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -8,6 +9,8 @@
   --color-foreground: var(--foreground);
   --font-sans: DM Sans, sans-serif;
   --font-mono: JetBrains Mono, monospace;
+  --font-century-gothic: var(--century-gothic);
+  --font-jost: var(--jost);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -104,6 +107,8 @@
   --font-sans: DM Sans, sans-serif;
   --font-serif: Source Serif 4, serif;
   --font-mono: JetBrains Mono, monospace;
+  --century-gothic: "century-gothic", sans-serif;
+  --jost: "Jost", sans-serif;
   --radius: 0.55rem;
   --shadow-x: 0px;
   --shadow-y: 4px;
@@ -139,7 +144,7 @@
   --secondary-foreground: oklch(0.9346 0.0051 228.8213);
   --muted: oklch(0.2212 0.0548 273.4802);
   --muted-foreground: oklch(0.6403 0.0436 278.9195);
-  --accent: oklch(0.3731 0.1339 277.7171);
+  --accent: oklch(0.2212 0.0548 273.4802);
   --accent-foreground: oklch(1.0000 0 0);
   --destructive: oklch(0.4815 0.1976 29.2339);
   --destructive-foreground: oklch(1.0000 0 0);
@@ -162,6 +167,8 @@
   --font-sans: DM Sans, sans-serif;
   --font-serif: Source Serif 4, serif;
   --font-mono: JetBrains Mono, monospace;
+  --century-gothic: "century-gothic", sans-serif;
+  --jost: "Jost", sans-serif;
   --radius: 0.55rem;
   --shadow-x: 0px;
   --shadow-y: 4px;
@@ -241,7 +248,24 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-jost antialiased;
     letter-spacing: var(--tracking-normal);
   }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-century-gothic font-bold;
+  }
+}
+
+/* Remove default auto-fill color */
+.input-autofill:-webkit-autofill {
+  background-color: none !important;
+  color: inherit !important;
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  border-radius: 8px;
 }
